Fixed hacker news tag text wrapping on firefox

--- a/main.css
+++ b/main.css
@@ -111,8 +111,8 @@
 
 .tag {
   padding: 5px;
-  min-width: 100px;
-  width: 100px;
+  min-width: 120px;
+  width: 120px;
   height: 20px;
   text-align: center;
   margin: 10px;
